tinyurl/src/main/docker/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: entrypoint
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: shortener
          http_filters:
          - name: envoy.router
            typed_config: {}
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
        - name: envoy.tcp_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
            stat_prefix: tcp
            cluster: resolver
  clusters:
  - name: shortener
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: shortener
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: shortener
                port_value: 8080
  - name: resolver
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: resolver
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: resolver
                    port_value: 8081
                
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
